@@ -1,3 +1,8 @@
+2006-07-26 Sandro Santilli <strk@refractions.net>
+
+	* source/headers/geos/geom/BinaryOp.h:
+	  Added geometry snapping heuristic
+
 2006-07-25 Sandro Santilli <strk@refractions.net>
 
 	* autogen.sh: make failures more visible
